--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 * {
     font-family: sans-serif;
 }
+
+.main-body {
+    margin: auto;
+    background-color: black;
+    color: gray;
+    text-align: center;
+}
+
+.main-tile {
+    font-size: 80px;
+}
+
+.nav li{
+    display: inline;
+    background-color: yellow;
+}
