Change background colors

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .main-body {
     margin: auto;
-    background-color: black;
+    background-color: darkslategray;
     color: gray;
     text-align: center;
 }
